Fix EZP-22124: inline image alignment is not respected (cherry picked from commit 8667993b8a940d50275728ed546a2ed8296376cf)

--- a/packages/ezwebin_extension/ezextension/ezwebin/design/ezwebin/stylesheets/core.css
+++ b/packages/ezwebin_extension/ezextension/ezwebin/design/ezwebin/stylesheets/core.css
@@ -502,6 +502,16 @@ div.object-center, table.object-center
     margin: 0.25em auto 0.25em auto;
 }
 
+.embed-inline-left
+{
+    float: left;
+}
+
+.embed-inline-right
+{
+    float: right;
+}
+
 .float-break
 {
     height: 1%; /* Fix for IE */
